# touch-heatcontrol

./: .gitmodules  CMakeLists.txt  README.md  partitions.txt  sdkconfig  sdkconfig.old
flash_data/: states.json
main/: CMakeLists.txt  main_touch_control_heater.c  waterproof_example_main.c
